- Presemtatopm layer의 ViewModel Inject 까지 정리함  - hilt , room , kotlin Version 충돌이 있어서... 문제 해결 ㅠㅠ...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">metro</string>
+
+
+    <string name="key">
+        Rmc8JdIku25QhnYp5H98FqAySAFM%2F73Zil7qnZDM%2Fwla0LBK4dQqu1qqogV3iTyGzG31CVzT3Grg5UQxoGzPiA%3D%3D
+    </string>
 </resources>
