--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,10 @@
     <string name="app_name">metro</string>
 
     <string name="hint_main_search_station">지하철역을 입력해주세요.</string>
+    <string name="main_menu_location_title_txt">현재 위치\n근처 역 찾기</string>
+    <string name="main_menu_line_title_txt">라인별\n지하철역 보기</string>
+    <string name="txt_network_failed">서버와 연결할 수 없습니다.\n연결상태를 확인해주세요.</string>
+    <string name="txt_unknown_error">알 수 없는 에러가 발생하였습니다.\n rlarladyd@gmail.com으로 메일 부탁드립니다.</string>
 
     <string name="key">Rmc8JdIku25QhnYp5H98FqAySAFM%2F73Zil7qnZDM%2Fwla0LBK4dQqu1qqogV3iTyGzG31CVzT3Grg5UQxoGzPiA%3D%3D</string>
     <string name="seoulKey">4e76674e57726c6135305559706671</string>
