--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">presentation</string>
+    <string name="key">Rmc8JdIku25QhnYp5H98FqAySAFM%2F73Zil7qnZDM%2Fwla0LBK4dQqu1qqogV3iTyGzG31CVzT3Grg5UQxoGzPiA%3D%3D</string>
+    <string name="seoulKey">4e76674e57726c6135305559706671</string>
+    <string name="trailKey">$2a$10$OeFg.B1.T5UlJzsVe73wguLb94enoY3mTYddw6DPeUfqMsdggcUum</string>
 </resources>
