--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,20 @@
     <string name="app_name">metro</string>
 
     <string name="hint_main_search_station">지하철역을 입력해주세요.</string>
+
     <string name="main_menu_location_title_txt">현재 위치\n근처 역 찾기</string>
     <string name="main_menu_line_title_txt">라인별\n지하철역 보기</string>
+
+    <string name="txt_location_loading">현재 위치를 불러오는 중입니다.\n잠시만 기다려주세요.</string>
     <string name="txt_network_failed">서버와 연결할 수 없습니다.\n연결상태를 확인해주세요.</string>
     <string name="txt_unknown_error">알 수 없는 에러가 발생하였습니다.\n rlarladyd@gmail.com으로 메일 부탁드립니다.</string>
+
+    <string name="toast_location_permission_failed">위치 권한 요청을 거부하였습니다.\n추후 서비스에 문제가 발생할 수 있습니다.</string>
+    <string name="toast_location_data_failed">위치 정보를 얻어올 수 없습니다.</string>
+    <string name="toast_location_data_cancel">위치 정보를 얻어오는 중 취소 하였습니다.</string>
 
     <string name="key">Rmc8JdIku25QhnYp5H98FqAySAFM%2F73Zil7qnZDM%2Fwla0LBK4dQqu1qqogV3iTyGzG31CVzT3Grg5UQxoGzPiA%3D%3D</string>
     <string name="seoulKey">4e76674e57726c6135305559706671</string>
     <string name="trailKey">$2a$10$OeFg.B1.T5UlJzsVe73wguLb94enoY3mTYddw6DPeUfqMsdggcUum</string>
+    <string name="google_cloude_key">AIzaSyDhCbnZLBWWIvBKmTxM8CSMzuRONeVOn4A</string>
 </resources>
