--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="txt_location_loading">현재 위치를 불러오는 중입니다.\n잠시만 기다려주세요.</string>
     <string name="txt_network_failed">서버와 연결할 수 없습니다.\n연결상태를 확인해주세요.</string>
     <string name="txt_unknown_error">알 수 없는 에러가 발생하였습니다.\n rlarladyd@gmail.com으로 메일 부탁드립니다.</string>
-
+    <string name="txt_location_failed_data">데이터를 가져오는 도중 알 수 없는 에러가 발생 하였습니다.\n rlarladyd@gmail.com으로 메일 부탁드립니다.</string>
     <string name="toast_location_permission_failed">위치 권한 요청을 거부하였습니다.\n추후 서비스에 문제가 발생할 수 있습니다.</string>
     <string name="toast_location_data_failed">위치 정보를 얻어올 수 없습니다.</string>
     <string name="toast_location_data_cancel">위치 정보를 얻어오는 중 취소 하였습니다.</string>
