--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,12 @@
 <resources>
     <string name="app_name">metro</string>
 
+    <string name="location_radius_1">1 Km</string>
+    <string name="location_radius_3">3 Km</string>
+    <string name="location_radius_5">5 Km</string>
+    <string name="location_radius_7">7 Km</string>
+    <string name="location_radius_10">10 Km</string>
+
     <string name="hint_main_search_station">지하철역을 입력해주세요.</string>
 
     <string name="main_menu_location_title_txt">현재 위치\n근처 역 찾기</string>
@@ -10,12 +16,20 @@
     <string name="txt_network_failed">서버와 연결할 수 없습니다.\n연결상태를 확인해주세요.</string>
     <string name="txt_unknown_error">알 수 없는 에러가 발생하였습니다.\n rlarladyd@gmail.com으로 메일 부탁드립니다.</string>
     <string name="txt_location_failed_data">데이터를 가져오는 도중 알 수 없는 에러가 발생 하였습니다.\n rlarladyd@gmail.com으로 메일 부탁드립니다.</string>
+    <string name="txt_location_data_size_zero">근처에 위치한 역이 없습니다. 검색할 반경을 다시 설정 해주세요.</string>
     <string name="toast_location_permission_failed">위치 권한 요청을 거부하였습니다.\n추후 서비스에 문제가 발생할 수 있습니다.</string>
     <string name="toast_location_data_failed">위치 정보를 얻어올 수 없습니다.</string>
     <string name="toast_location_data_cancel">위치 정보를 얻어오는 중 취소 하였습니다.</string>
 
     <string name="transition_station_name">station %s</string>
     <string name="transition_station_line_number">lineNumber %s</string>
+
+    <string name="view_station_first_time">첫차</string>
+    <string name="view_station_last_time">막차</string>
+    <string name="view_week_day">평일</string>
+    <string name="view_sat_day">토요일</string>
+    <string name="view_sun_day">일요일</string>
+
 
     <string name="key">Rmc8JdIku25QhnYp5H98FqAySAFM%2F73Zil7qnZDM%2Fwla0LBK4dQqu1qqogV3iTyGzG31CVzT3Grg5UQxoGzPiA%3D%3D</string>
     <string name="seoulKey">4e76674e57726c6135305559706671</string>
