--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="main_menu_location_title_txt">현재 위치\n근처 역 찾기</string>
     <string name="main_menu_line_title_txt">라인별\n지하철역 보기</string>
 
+    <string name="text_data_not_found">데이터를 불러올 수 없습니다.\n다시 시도해주세요.</string>
     <string name="txt_location_loading">현재 위치를 불러오는 중입니다.\n잠시만 기다려주세요.</string>
     <string name="txt_network_failed">서버와 연결할 수 없습니다.\n연결상태를 확인해주세요.</string>
     <string name="txt_unknown_error">알 수 없는 에러가 발생하였습니다.\n rlarladyd@gmail.com으로 메일 부탁드립니다.</string>
