--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="view_week_day">평일</string>
     <string name="view_sat_day">토요일</string>
     <string name="view_sun_day">일요일 및 공휴일</string>
+    <string name="view_station_timetable_title">지하철 시간표 보기</string>
 
 
     <string name="key">Rmc8JdIku25QhnYp5H98FqAySAFM%2F73Zil7qnZDM%2Fwla0LBK4dQqu1qqogV3iTyGzG31CVzT3Grg5UQxoGzPiA%3D%3D</string>
