--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,14 +26,15 @@
     <string name="transition_station_line_number">lineNumber %s</string>
     <string name="transition_station_layout">layout %s</string>
 
-    <string name="view_station_up_time_title">상행</string>
-    <string name="view_station_down_time_title">하행</string>
+    <string name="view_station_up_time_title">올라가는 경로</string>
+    <string name="view_station_down_time_title">내려가는 경로</string>
     <string name="view_station_first_time">첫차</string>
     <string name="view_station_last_time">막차</string>
     <string name="view_week_day">평일</string>
     <string name="view_sat_day">토요일</string>
     <string name="view_sun_day">일요일 및 공휴일</string>
     <string name="view_station_timetable_title">지하철 시간표 보기</string>
+    <string name="view_entrance_guide_title">출입구에서 승강장 이동경로 보기</string>
 
 
     <string name="key">Rmc8JdIku25QhnYp5H98FqAySAFM%2F73Zil7qnZDM%2Fwla0LBK4dQqu1qqogV3iTyGzG31CVzT3Grg5UQxoGzPiA%3D%3D</string>
