승강중 이동경로 안내 추가중  - 상행,하행,출입구 별 안내 View 완료  - 데이터 파싱 간결하게 수정해야함 (지금 너무 복잡)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="transition_station_line_number">lineNumber %s</string>
     <string name="transition_station_layout">layout %s</string>
 
+    <string name="view_nothing">없음</string>
     <string name="view_station_up_time_title">올라가는 경로</string>
     <string name="view_station_down_time_title">내려가는 경로</string>
     <string name="view_station_first_time">첫차</string>
